--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="Play minecraft 1.8.9 in your browser" />
-		<meta name="keywords" content="eaglercraft, eaglercraftx, minecraft, 1.8, 1.8.9" />
-		<title>EaglercraftX 1.8.9</title>
+		<meta name="description" content="Play minecraft 1.12.2 in your browser" />
+		<meta name="keywords" content="eaglercraft, eaglercraftx, minecraft, 1.12, 1.12.2" />
+		<title>Eaglercraft 1.12</title>
 		<meta property="og:locale" content="en-US" />
 		<meta property="og:type" content="website" />
-		<meta property="og:title" content="EaglercraftX 1.8.9" />
-		<meta property="og:description" content="Play minecraft 1.8.9 in your browser" />
+		<meta property="og:title" content="Eaglercraft 1.12.2" />
+		<meta property="og:description" content="Play minecraft 1.12.2 in your browser" />
 		<meta property="og:image" content="favicon.png" />
 		<link type="image/png" rel="shortcut icon" href="favicon.png" />
 		<script type="text/javascript" src="classes.js"></script>
