--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="Play minecraft 1.12.2 in your browser" />
 		<meta name="keywords" content="eaglercraft, eaglercraftx, minecraft, 1.12, 1.12.2" />
-		<title>Eaglercraft 1.12</title>
+		<title>Eaglercraft 1.12.2</title>
 		<meta property="og:locale" content="en-US" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="Eaglercraft 1.12.2" />
 		<meta property="og:description" content="Play minecraft 1.12.2 in your browser" />
 		<meta property="og:image" content="favicon.png" />
 		<link type="image/png" rel="shortcut icon" href="favicon.png" />
+		<script> 
+			alert('this is not real 1.12, whoever said this was and sent it to you is a dumbsas')
+		</script>
 		<script type="text/javascript" src="classes.js"></script>
 		<script type="text/javascript" src="fix-webm-duration.js"></script>
 		<script type="text/javascript">
