--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 		<meta property="og:image" content="favicon.png" />
 		<link type="image/png" rel="shortcut icon" href="favicon.png" />
 		<script> 
-			alert('this is not real 1.12, whoever said this was and sent it to you is a dumbsas')
+			alert(`this is not real 1.12, whoever said this was and sent it to you is a dumbass
+   				next idiot to call this real 1.12
+				will have calder young
+    				following you
+   
+   			`)
 		</script>
 		<script type="text/javascript" src="classes.js"></script>
 		<script type="text/javascript" src="fix-webm-duration.js"></script>
